# semg-srl

./: .gitattributes  .gitignore  README.md  pyproject.toml
configs/: datasets.yaml  labels_db2.yaml  paths.yaml
reports/: common_labels.txt  figures_index.html  labels_summary.csv  loso_benchmark_all.csv  loso_benchmark_wilcoxon.csv  loso_lda_label_id.csv  loso_lda_label_name.csv  loso_sweep_results.csv  loso_three.txt  within_S01_lda_label_name.csv  within_S01_svm_rbf_label_id.csv  within_S01_svm_rbf_label_name.csv  within_S12_svm_rbf_label_id.csv  within_S33_svm_rbf_label_id.csv  within_benchmark_S01.csv
reports/fatigue/: fatigue_markers_summary.csv
reports/fatigue_proxy/: fatigue_proxy_loso_metrics.csv
reports/print_pack/: loso_benchmark_all.csv  loso_benchmark_wilcoxon.csv  loso_sweep_leaderboard.csv  loso_sweep_wilcoxon_vs_ensemble.csv
scripts/: benchmark_loso.py  benchmark_loso_sweep.py  benchmark_within.py  build_db2_features.py  common_codes.py  common_labels.py  fatigue_markers_db2.py  fatigue_proxy_classifier.py  make_label_yaml_template.py  make_results_panel.py  organise_figures.py  plot_box_whiskers.py  plot_perclass_bars.py  plot_score_lines.py  summarise_features.py  train_loso.py  train_within_subject.py
src/semg_srl/eval/: metrics.py  plots.py  uncertainty.py
src/semg_srl/features/: timefreq.py
src/semg_srl/io/: ninapro_db2.py
src/semg_srl/preprocess/: filtering.py  windowing.py
tests/: test_db2_loader.py  test_imports.py  test_windowing.py
